src/test/deca/context/valid/personalTests/testContextObjetAttributs2.deca
// Test la declaration d'un objet avec un bloc d'initialisation

class A {

    void m() {
        println("m");
    }


    int a;
    println("init");
}

{
    A a;
    a = new A();
    a.m();
    println("ok");
}