src/test/deca/context/invalid/personalTests/printInvalide12.deca
class A {
    int a;
    void m() {
        println("m");
    }

    void n() {
        println(this.a);
    }
}

{
    A a;
    a = new A();
    a.m();
    a.n();
    println(a);
}